--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav{
 @media screen and (max-width: 576px) {
 
     .container{
-        padding: 1rem;
+        padding: 0.5rem 1rem;
     }
 
     .logo h1{
