--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav{
 
 .menu span{
     display: inline-block;
-    width: 2rem;
+    width: 1.6rem;
     height: 1px;
     background-color: var(--text-color);
 }
@@ -73,8 +73,8 @@ nav{
 
 @media screen and (max-width: 576px) {
 
-    .container{
-        padding: 0.5rem 1rem;
+    nav{
+        padding: 1.5rem;
     }
 
     .logo h1{
