--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav{
 
 .menu span{
     display: inline-block;
-    width: 20px;
+    width: 25px;
     height: 1px;
     background-color: var(--text-color);
 }
@@ -73,6 +73,9 @@ nav{
 
 @media screen and (max-width: 576px) {
 
+    nav{
+        padding: 1.5rem 1.5rem;
+    }
 
     .logo h1{
         font-size: 1em;
