--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body{
 
 /* Header */
 
+.logo{
+    z-index: 2;
+}
+
 .logo h1{
     font-size: 1.2em;
     color: #040316;
@@ -47,7 +51,7 @@ nav{
     padding: 1rem;
 }
 
-.nav-dekstop ul{
+.nav-dekstop > ul{
     display: flex;
     list-style: none;
     gap: 2rem;
@@ -55,26 +59,63 @@ nav{
 
 .nav-dekstop ul li a{
     text-decoration: none;
+    color: var(--text-color);
 }
 
 .menu{
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 7px;
+    z-index: 2;
 }
 
 .menu span{
     display: inline-block;
-    width: 30px;
+    width: 27px;
     height: 1px;
     background-color: var(--text-color);
+}
+
+.nav-mobile{
+    display: none;
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    position: absolute;
+    left: -100vw;
+    top: 0;
+    border: 1px solid black;
+    transition: left 0.3s ease-in-out;
+}
+
+.nav-mobile > ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.nav-mobile > ul > li > a{
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.navActive{
+    left: 0;
+    transition: left 0.3s ease-in-out;
 }
 
 
 @media screen and (max-width: 576px) {
 
+    /* header */
+
     nav{
-        padding: 2rem;
+        padding: 1.5rem;
+        position: relative;
+        
     }
 
     .logo h1{
@@ -82,5 +123,36 @@ nav{
     }
     .nav-dekstop{
         display: none;
+    }
+
+    .menu{
+        display: flex;
+    }
+
+    .nav-mobile{
+        display: flex;
+    }
+
+
+}
+
+@media screen and (min-width: 576px) and (max-width:786px){
+
+    /* header */
+
+    nav{
+        padding: 2rem;
+    }
+
+    .nav-dekstop{
+        display: none;
+    }
+
+    .menu{
+        display: flex;
+    }
+
+    .nav-mobile{
+        display: flex;
     }
 }
