--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body{
 .container{
     width: 85rem;
     max-width: 85rem;
-    border: 1px solid black;
 }
 
 /* Header */
@@ -86,7 +85,6 @@ nav{
     position: absolute;
     left: -100vw;
     top: 0;
-    border: 1px solid black;
     transition: left 0.3s ease-in-out;
 }
 
@@ -105,6 +103,55 @@ nav{
 .navActive{
     left: 0;
     transition: left 0.3s ease-in-out;
+}
+
+/* Hero */
+
+.hero-section{
+    padding: 12rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero-text{
+    max-width: 719px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.hero-text > h1{
+    font-size: 3em;
+    font-weight: 600;
+}
+
+.hero-text > p{
+    max-width: 630px;
+}
+
+.hero-button{
+    display: flex;
+    gap: 27px;
+    margin-top: 1rem;
+}
+
+.hero-button > button:nth-of-type(1){
+    width: 200px;
+    height: 50px;
+    border: none;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    border-radius: 5px;
+}
+
+.hero-button > button:nth-of-type(2){
+    width: 150px;
+    height: 50px;
+    border: none;
+    background-color: var(--secondary-color);
+    color: var(--background-color);
+    border-radius: 5px;
 }
 
 
@@ -133,10 +180,29 @@ nav{
         display: flex;
     }
 
+    /* Hero Section */
 
+    .hero-section{
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 4rem;
+        padding: 4rem 1rem;
+    }
+
+    .hero-img > img{
+        max-width: 15rem;
+    }
+
+    .hero-text h1{
+        font-size: 2em;
+    }
+
+    .hero-button{
+        flex-wrap: wrap;
+    }
 }
 
-@media screen and (min-width: 576px) and (max-width:786px){
+@media screen and (min-width: 576px) and (max-width:768px){
 
     /* header */
 
@@ -154,5 +220,41 @@ nav{
 
     .nav-mobile{
         display: flex;
+    }
+
+    /* Hero Section */
+    .hero-section{
+        flex-direction: column-reverse;
+        gap: 5rem;
+        padding: 5rem 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width:1024px){
+
+    /* Navigation */
+
+    nav{
+        padding: 2rem 4rem;
+    }
+
+    .nav-dekstop{
+        display: none;
+    }
+
+    .menu{
+        display: flex;
+    }
+
+    .nav-mobile{
+        display: flex;
+    }
+
+    /* Hero Section */
+
+    .hero-section{
+        flex-direction: column-reverse;
+        gap: 5rem;
+        padding: 12rem 4rem;
     }
 }
